--- a/web.config
+++ b/web.config
@@ -4,8 +4,9 @@
         <defaultDocument enabled="true">
             <files>
                 <clear />
-                <add value="index.htm" />
+                <add value="index.html" />
             </files>
         </defaultDocument>
     </system.webServer>
 </configuration>
+
